[package]
edition = "2021"
name = "qrcode-rs_qrcode"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", default-features = false, features = ["napi4"] }
napi-derive = "2.11.0"
qrcode-generator = "4.1.7"
serde = "1.0.152"
serde_derive = "1.0.152"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
